feat: Make sure design is responsive

--- a/emails/confirm-email.html
+++ b/emails/confirm-email.html
@@ -346,10 +346,7 @@
           >
             <tr>
               <td class="email-masthead">
-                <a
-                  href="http://localhost:3000"
-                  class="f-fallback email-masthead_name"
-                >
+                <a href="{{base_url}}" class="f-fallback email-masthead_name">
                   ⚡ Magic NextAuth
                 </a>
               </td>
